[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/enemies/sprite_basic_enemy0.png" type="Texture" id=1]
[ext_resource path="res://enemies/BasicEnemy.gd" type="Script" id=2]
[ext_resource path="res://physics/SoftCollision.tscn" type="PackedScene" id=3]
[ext_resource path="res://physics/HitEffect.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="BasicEnemy" type="Area2D" groups=["enemies"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -9, -14, 9, -14, 14, -7, 14, 0, 13, 14, 11, 16, 9, 16, 6, 13, 2, 4, -2, 4, -5, 13, -9, 16, -11, 16, -13, 14, -14, 0, -14, -7 )

[node name="SoftCollision" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 1 )

[node name="Gun" type="Position2D" parent="."]
position = Vector2( 0, 2 )

[node name="HitEffect" parent="." instance=ExtResource( 4 )]

[connection signal="area_entered" from="." to="." method="_on_BasicEnemy_area_entered"]
[connection signal="spawn_enemy_laser" from="." to="." method="_on_BasicEnemy_spawn_enemy_laser"]

[editable path="SoftCollision"]
